--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@babel/preset-react": "^7.7.4",
     "@babel/register": "^7.7.4",
     "@innovaccer/design-system": "^2.13.3",
-    "@storybook/addon-docs": "^6.1.6",
-    "@storybook/addon-essentials": "^6.1.5",
-    "@storybook/react": "^6.1.5",
-    "@storybook/storybook-deployer": "^2.8.7",
+    "@storybook/addon-docs": "6.5.10",
+    "@storybook/addon-essentials": "6.5.10",
+    "@storybook/react": "6.5.10",
+    "@storybook/storybook-deployer": "2.8.12",
     "autoprefixer": "^9.7.3",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
@@ -41,7 +41,7 @@
     "gulp-postcss": "^9.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "install": "^0.13.0",
-    "jsdom": "^15.2.1",
+    "jsdom": "^16.4.0",
     "mini-css-extract-plugin": "^0.8.0",
     "mocha": "^6.2.2",
     "postcss-color-mod-function": "^3.0.3",
@@ -58,7 +58,7 @@
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.2",
-    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-bundle-analyzer": "^4.0.0",
     "webpack-cli": "^3.3.10",
     "webpack-s3-plugin": "^1.2.0-rc.0"
   },
