--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -4,14 +4,14 @@ on: pull_request
 
 jobs:
   lint_test_build:
-    name: lint, test and build
+    name: lint and test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
             
       - uses: actions/setup-node@v1
         with:
-          node-version: '14.x'
+          node-version: '20.x'
 
       - name: npm install
         run: npm install
