--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
     "@babel/register": "^7.7.4",
-    "@innovaccer/design-system": "^2.41.3",
+    "@innovaccer/design-system": "^3.1.0",
     "@storybook/addon-docs": "6.5.10",
     "@storybook/addon-essentials": "6.5.10",
     "@storybook/react": "6.5.10",
     "@storybook/storybook-deployer": "2.8.12",
-    "autoprefixer": "^9.7.3",
+    "autoprefixer": "^10.4.20",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "chai": "^4.2.0",
     "cross-env": "^6.0.3",
-    "css-loader": "^3.2.1",
+    "css-loader": "^7.1.2",
     "draftjs-to-markdown": "^0.6.0",
     "embed-video": "^2.0.4",
     "enzyme": "^3.10.0",
@@ -35,31 +35,30 @@
     "eslint-plugin-react": "^7.17.0",
     "file-loader": "^5.0.2",
     "flow-bin": "^0.113.0",
-    "gulp": "^4.0.2",
+    "gulp": "5.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-postcss": "^9.0.0",
-    "gulp-sourcemaps": "^3.0.0",
+    "gulp-sourcemaps": "2.6.5",
     "install": "^0.13.0",
     "jsdom": "^16.4.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "mocha": "^6.2.2",
+    "mini-css-extract-plugin": "^2.9.1",
+    "mocha": "^10.7.3",
     "postcss-color-mod-function": "^3.0.3",
-    "postcss-loader": "^3.0.0",
+    "postcss-loader": "^8.1.1",
     "precss": "^4.0.0",
-    "prettier": "^2.5.1",
+    "prettier": "^2.8.8",
     "react": "^16.12.0",
     "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^16.12.0",
+    "react-dom": "16.14.0",
     "react-test-renderer": "^16.12.0",
     "rimraf": "^3.0.0",
     "sinon": "^7.5.0",
     "style-loader": "^1.0.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^3.0.0",
-    "webpack": "^4.41.2",
     "webpack-bundle-analyzer": "^4.0.0",
-    "webpack-cli": "^3.3.10",
+    "webpack-cli": "^5.1.4",
     "webpack-s3-plugin": "^1.2.0-rc.0"
   },
   "dependencies": {
@@ -74,7 +73,7 @@
     "redraft": "^0.10.2"
   },
   "peerDependencies": {
-    "@innovaccer/design-system": "^2.41.3",
+    "@innovaccer/design-system": "^3.1.0",
     "react": "0.13.x || 0.14.x || ^15.0.0-0 || 15.x.x || ^16.0.0-0 || ^16.x.x",
     "react-dom": "0.13.x || 0.14.x || ^15.0.0-0 || 15.x.x || ^16.0.0-0 || ^16.x.x"
   },
@@ -82,18 +81,26 @@
     "build:css": "cp ./node_modules/@innovaccer/design-system/css/dist/* dist/",
     "build-css": "gulp --gulpfile config/gulpfile.js build",
     "clean": "rimraf dist && rimraf public",
-    "build:webpack": "cross-env NODE_ENV=production webpack  --mode production --config config/webpack.config.js",
+    "build:webpack": "NODE_OPTIONS=--openssl-legacy-provider cross-env NODE_ENV=production webpack  --mode production --config config/webpack.config.js",
     "build": "npm run clean && npm run build-css && npm run build:webpack",
     "test": "cross-env BABEL_ENV=test mocha --require config/test-compiler.js config/test-setup.js src/**/*Test.js",
-    "lint": "eslint src",
+    "lint": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css}\"",
     "lintdocs": "eslint docs/src",
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
     "check": "npm run lint && npm run flow",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "deploy-storybook": "storybook-to-ghpages",
+    "storybook": "NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 6006",
+    "build-storybook": "NODE_OPTIONS=--openssl-legacy-provider build-storybook",
+    "deploy-storybook": "NODE_OPTIONS=--openssl-legacy-provider storybook-to-ghpages",
     "version": "./scripts/version.sh",
     "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css}\""
+  },
+  "engines": {
+    "node": ">=20.15.0",
+    "npm": ">=10.7.0"
+  },
+  "overrides": {
+    "react-dom": "16.14.0",
+    "webpack": "4.46.0"
   },
   "license": "MIT"
 }
